--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -3,7 +3,7 @@
   "localized-strings": {
     "next": "Next",
     "previous": "Previous",
-    "tagline": "A website for OpenEBS Documentation",
+    "tagline": "A website for Litmus Documentation",
     "overview": "Welcome to OpenEBS Documentation",
     "Overview": "Overview",
     "Introduction": "Introduction"
