--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,9 +4,31 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "A website for Litmus Documentation",
-    "overview": "Welcome to OpenEBS Documentation",
+    "components": "Building Blocks Of Litmus",
+    "Litmus Architecture": "Litmus Architecture",
+    "chaos": "Chaos Engineering in Litmus",
+    "Chaos Engineering": "Chaos Engineering",
+    "ci": "Litmus Powered CI Pipelines",
+    "CI Integration": "CI Integration",
+    "features": "Litmus Features",
+    "Features": "Features",
+    "gettingstarted": "Setting Up Litmus",
+    "Getting Started": "Getting Started",
+    "logs": "Capturing & Viewing Logs",
+    "Log Collection & Analysis": "Log Collection & Analysis",
+    "overview": "Welcome to Litmus Documentation",
     "Overview": "Overview",
-    "Introduction": "Introduction"
+    "prerequisites": "Litmus Pre-Requisites",
+    "Pre-Requisites": "Pre-Requisites",
+    "result": "Viewing Result of a Litmus Experiment",
+    "Result Mechanism": "Result Mechanism",
+    "running": "Running a Litmus Experiment",
+    "Running a Litmus Experiment": "Running a Litmus Experiment",
+    "workflow": "Litmus Test Execution Workflow",
+    "Workflow of a Litmus Experiment": "Workflow of a Litmus Experiment",
+    "Introduction": "Introduction",
+    "Concepts": "Concepts",
+    "User Guides": "User Guides"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
