--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -8,16 +8,32 @@
     "Litmus Architecture": "Litmus Architecture",
     "chaos": "Chaos Engineering in Litmus",
     "Chaos Engineering": "Chaos Engineering",
+    "ci-dashboard": "CI/E2E Results",
+    "CI Dashboard": "CI Dashboard",
+    "ci-overview": "Reference Implementation - OpenEBS CI",
+    "Overview": "Overview",
+    "ci-workflow": "OpenEBS CI Workflow",
+    "CI Workflow": "CI Workflow",
     "ci": "Litmus Powered CI Pipelines",
     "CI Integration": "CI Integration",
+    "dashboard-overview": "CI/E2E Result Visualization Portal",
+    "e2e": "e2e Pipelines - Leveraging Litmus",
+    "Litmus Powered E2E": "Litmus Powered E2E",
     "features": "Litmus Features",
     "Features": "Features",
     "gettingstarted": "Setting Up Litmus",
     "Getting Started": "Getting Started",
+    "gitlabinfra": "Gitlab Framework Components",
+    "Gitlab Infrastructure": "Gitlab Infrastructure",
+    "gitlabrunner": "Gitlab Jobs for Litmus Experiments",
+    "Gitlab Job Runner Template": "Gitlab Job Runner Template",
+    "logging": "EFK-Based Logging Framework",
+    "E2E Logging Framework": "E2E Logging Framework",
     "logs": "Capturing & Viewing Logs",
     "Log Collection & Analysis": "Log Collection & Analysis",
     "overview": "Welcome to Litmus Documentation",
-    "Overview": "Overview",
+    "platforms": "E2E Platforms Supported by Litmus",
+    "E2E Platforms": "E2E Platforms",
     "prerequisites": "Litmus Pre-Requisites",
     "Pre-Requisites": "Pre-Requisites",
     "result": "Viewing Result of a Litmus Experiment",
@@ -26,9 +42,13 @@
     "Running a Litmus Experiment": "Running a Litmus Experiment",
     "workflow": "Litmus Test Execution Workflow",
     "Workflow of a Litmus Experiment": "Workflow of a Litmus Experiment",
+    "workloads-dashboard": "Reference Stateful Applications",
+    "Workloads Dashboard": "Workloads Dashboard",
     "Introduction": "Introduction",
     "Concepts": "Concepts",
-    "User Guides": "User Guides"
+    "User Guides": "User Guides",
+    "OpenEBS CI": "OpenEBS CI",
+    "CI/E2E Portal": "CI/E2E Portal"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
