Fix footer image
Signed-off-by: Pradeepkumarbk <pradeepkumar.bk96@gmail.com>

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,7 +4,7 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "A website for Litmus Documentation",
-    "components": "Building Blocks Of Litmus",
+    "components": "Litmus Architecture",
     "Litmus Architecture": "Litmus Architecture",
     "chaos": "Chaos Engineering in Litmus",
     "Chaos Engineering": "Chaos Engineering",
