(feat)(docs): add cookbook sections and improve ci docs with images
Signed-off-by: ksatchit <karthik.s@openebs.io>

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -6,12 +6,25 @@
     "tagline": "A website for Litmus Documentation",
     "components": "Litmus Architecture",
     "Litmus Architecture": "Litmus Architecture",
+    "cb-bestpractices": "Litmusbook Best Practices",
+    "Best Practices": "Best Practices",
+    "cb-construct": "Building the Litmus test artifact",
+    "Constructing Litmusbooks": "Constructing Litmusbooks",
+    "cb-experiment": "Understanding the test",
+    "Know Your Experiment": "Know Your Experiment",
+    "cb-litmuslib": "Using the Litmus Utils",
+    "Leveraging LitmusLib": "Leveraging LitmusLib",
+    "cb-overview": "How to write a Litmusbook",
+    "Overview": "Overview",
+    "cb-quality": "Desired features of a Litmusbook",
+    "Quality Parameters": "Quality Parameters",
+    "cb-test": "Testing the Litmus test",
+    "Testing Litmusbooks": "Testing Litmusbooks",
     "chaos": "Chaos Engineering in Litmus",
     "Chaos Engineering": "Chaos Engineering",
     "ci-dashboard": "CI/E2E Results",
     "CI Dashboard": "CI Dashboard",
     "ci-overview": "Reference Implementation - OpenEBS CI",
-    "Overview": "Overview",
     "ci-workflow": "OpenEBS CI Workflow",
     "CI Workflow": "CI Workflow",
     "ci": "Litmus Powered CI Pipelines",
@@ -48,7 +61,8 @@
     "Concepts": "Concepts",
     "User Guides": "User Guides",
     "OpenEBS CI": "OpenEBS CI",
-    "CI/E2E Portal": "CI/E2E Portal"
+    "CI/E2E Portal": "CI/E2E Portal",
+    "Cookbook": "Cookbook"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
